# meshRandomizer_modifs_raphael

./: Element.cpp  Element.h  Hexahedron.cpp  Hexahedron.h  Prism.cpp  README.md  raphael_stage.md  temp_cortex_opt.m3d  temp_cyl_opt.m3d
analysis/: evaluate_quality.cpp  mesh_quality_metrics.csv  run_analysis.py
analysis/raw_details/: detail_cortex_s3_p0.csv  detail_cortex_s3_p125.csv  detail_cortex_s3_p249.csv  detail_cyl50_s4_p0.csv  detail_cyl50_s4_p125.csv  detail_cyl50_s4_p249.csv  detail_femur_s4_p0.csv  detail_femur_s4_p125.csv  detail_femur_s4_p249.csv  detail_hex_sphe_s3_p0.csv  detail_hex_sphe_s3_p125.csv  detail_hex_sphe_s3_p249.csv
database/: generate_database.py
database/inputs/: cyl50_s4.m3d  cyl50_s4.oct  hex_sphe_s3.m3d  hex_sphe_s3.oct
database/outputs/cortex_s3/: cortex_s3_p0.m3d  cortex_s3_p0.vtk  cortex_s3_p1.m3d  cortex_s3_p1.vtk  cortex_s3_p10.m3d  cortex_s3_p10.vtk  cortex_s3_p100.m3d  cortex_s3_p100.vtk  cortex_s3_p101.m3d  cortex_s3_p101.vtk  cortex_s3_p102.m3d  cortex_s3_p102.vtk  cortex_s3_p103.m3d  cortex_s3_p103.vtk  cortex_s3_p104.m3d  cortex_s3_p104.vtk  cortex_s3_p105.m3d  cortex_s3_p105.vtk  cortex_s3_p106.m3d  cortex_s3_p106.vtk  cortex_s3_p107.m3d  cortex_s3_p107.vtk  cortex_s3_p108.m3d  cortex_s3_p108.vtk  cortex_s3_p109.m3d  cortex_s3_p109.vtk  cortex_s3_p11.m3d  cortex_s3_p11.vtk  cortex_s3_p110.m3d  cortex_s3_p110.vtk  cortex_s3_p111.m3d  cortex_s3_p111.vtk  cortex_s3_p112.m3d  cortex_s3_p112.vtk  cortex_s3_p113.m3d  cortex_s3_p113.vtk  cortex_s3_p114.m3d  (+463 more)
math/: Container1.h  Matrix.h
src/: CMakeLists.txt  main.cpp
(+1500 files in other folders)
